=======================
 CHANGES for crate-pdo
=======================

Unreleased
==========

2014/10/27 0.0.3
================

- added support for named parameters (required by dbal driver)

- fixed the way row count is calculated

2014/10/20 0.0.2
================

- Update dependencies, `rdlowrey/artax` moved to `amphp/artax`

2014/09/09 0.0.1
================

 - initial release